<resources>
    <string name="app_name">Hello Android</string>
    <string name="text_contact">Contact Us:</string>
    <string name="text_company">Udacity</string>
    <string name="text_postal">2465 Latham St</string>
    <string name="text_address">Mountain View, CA 94043</string>
    <string name="text_phone">650-555-5555</string>
    <string name="text_email">www.udacity.com</string>
    <string name="text_phrase">GROW YOUR KNOWLEDGE</string>
</resources>
