<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/udacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/udacityblue" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/img1gapimg2"
            android:adjustViewBounds="true"
            android:src="@drawable/udacitycourses" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/courses"
            android:fontFamily="@font/quantico"
            android:text="@string/text_contact"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:fontFamily="@font/quantico"
            android:text="@string/text_company"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/company"
            android:fontFamily="@font/quantico"
            android:text="@string/text_postal"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/postal"
            android:fontFamily="@font/quantico"
            android:text="@string/text_address"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:fontFamily="@font/quantico"
            android:text="@string/text_phone"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:fontFamily="@font/quantico"
            android:text="@string/text_email"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <ImageView
            android:id="@+id/udacityimg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imgview_height"
            android:layout_above="@id/footer"
            android:layout_marginBottom="@dimen/gap"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/stairs"/>

        <ImageView
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/footer" />

        <TextView
            android:id="@+id/textgrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/quantico"
            android:text="@string/text_phrase"
            android:gravity="center"
            android:paddingBottom="@dimen/gap"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </RelativeLayout>

</RelativeLayout>

